Devops/Kubernetes/S15-networkpolicy/np-project/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: clarusdb-ns
spec:
  podSelector:
    matchLabels:
      db: clarusdb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: clarusshop-ns
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: clarusshop-ns
      ports:
        - protocol: TCP
          port: 80
